Archive2/30/880c4df57a4a23/output
main.cpp:1:28: error: expected ',' or '...' before 'this'
 extern "C" void func(void* this); // ?
                            ^
